# turtle_calibration

./: CMakeLists.txt  README.md  lidar.pcd  package.xml  setup.cfg  setup.py
calib/: calib_script.sh
include/: projectPointcloud.h
rosbags/lidar_bag_chess/: lidar_bag_chess.db3  metadata.yaml
rosbags/lidar_bag_cones/: lidar_bag_cones.db3  metadata.yaml
settings/: intrinsic_params.yaml  intrinsic_params0.yaml  lidar_camera_extrinsic.ini
src/: camera_lidar_projection.cpp  lidar_camera_calibration.cpp  lidar_camera_projection.cpp  main.cpp  projectPointcloud.cpp  ros2bag_to_pcd.cpp  utils.hpp
turtle_calibration/: calibration.py
